Fixed Protobuf and Entity naming issues